You should have used OwnerVehicles
Instead of using Owner for this view, you should have used the view model OwnerVehicles.

--- a/Assignment1/Views/Owners/AllVehicles.cshtml
+++ b/Assignment1/Views/Owners/AllVehicles.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<Assignment1.Models.Owner>
+ 
+@* GD: The model for this view should have been OwnerVehicles*@
 
 @{
     ViewBag.Title = "AllVehicles";
