--- a/Assignment1/Views/Owners/Index.cshtml
+++ b/Assignment1/Views/Owners/Index.cshtml
@@ -35,7 +35,7 @@
             @Html.DisplayFor(modelItem => item.State)
         </td>
         <td>
-            @Html.ActionLink("AllVehicles", "AllVehciles", new { id = item.Id }) |
+            @Html.ActionLink("AllVehicles", "OwnerVehicles", new { id = item.Id }) |
             @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
             @Html.ActionLink("Details", "Details", new { id = item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.Id })
